[tool.poetry]
name = "virtualenvironment"
version = "0.1.0"
description = ""
authors = ["Yevhenii Bessonov <norent777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
